--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ body{
     animation: gradient 25s ease infinite;
     height: 3vh;
 }
+/*modify screen size*/
 @keyframes gradient {
     0% {
         background-position: 100% 70%;
